--- a/style.css
+++ b/style.css
@@ -19,3 +19,24 @@ header {
  left:0;
  background:white;
 }
+
+nav {
+ width:100%
+ height:100%;
+ background:grey;
+}
+
+nav ul {
+ height:100%;
+ display:flex;
+ gap:3m;
+ margin-left:20%;
+ align-items:center;
+ justify-content:center;
+ font-size:1.25vw;
+ font-weight:700;
+ text-transform:uppercase;
+ color:black;
+ text-decoration:none;
+ list-style:none;
+}
