--- a/style.css
+++ b/style.css
@@ -50,4 +50,14 @@ nav a {
 
 nav a:hover {
  color:#ff7000;
+ transition: color 0.2s ease-in-out;
+}
+
+.hero{
+ width:100%;
+ height:100vh;
+ color:white;
+ background:black;
+ display:flex;
+ flex-direction:column;
 }
