--- a/style.css
+++ b/style.css
@@ -1,63 +1,85 @@
-* {
- margin:0;
- padding:0;
-}
+ * {
+   margin: 0;
+   padding: 0;
+ }
 
-html {
- scroll-behavior:smooth;
-}
+ html {
+   scroll-behavior: smooth;
+ }
 
-body {
- background:black;
- font-family:'Raleway', sans-serif;
-}
+ body {
+   font-family: 'Raleway', sans-serif;
+ }
 
-header {
- width:100%;
- height:100px;
- position:fixed;
- top:0;
- left:0;
- background:white;
-}
+ header {
+   width: 100%;
+   height: 100px;
+   position: fixed;
+   top: 0;
+   left: 0;
+   background: #fff;
+ }
 
-nav {
- width:100%
- height:100%;
- background:grey;
-}
+ nav {
+   width: 100%;
+   height: 100%;
+ }
 
-nav ul {
- height:100%;
- display:flex;
- gap:3m;
- margin-left:20%;
- align-items:center;
- justify-content:center;
- font-size:1.25vw;
- font-weight:700;
- text-transform:uppercase;
- color:black;
- text-decoration:none;
- list-style:none;
-}
+ nav ul {
+   height: 100%;
+   display: flex;
+   gap: 3em;
+   margin-left: 20%;
+   align-items: center;
+   font-size: 1.25vw;
+   font-weight: 700;
+   text-transform: uppercase;
+   color: black;
+   text-decoration: none;
+   list-style: none;
+ }
 
-nav a {
- text-decoration:none;
- color:black;
- transition: color 0.2s ease-in-out;
-}
+ nav a {
+   text-decoration: none;
+   color: black;
+   transition: color 0.2s ease-in-out;
+ }
 
-nav a:hover {
- color:#ff7000;
- transition: color 0.2s ease-in-out;
-}
+ nav a:hover {
+   color: #ff7000;
+   transition: color 0.2s ease-in-out;
+ }
 
-.hero{
- width:100%;
- height:100vh;
- color:white;
- background:black;
- display:flex;
- flex-direction:column;
+ .hero {
+   width: 100%;
+   height: 100vh;
+   color: white;
+   background-image: url("https://images.unsplash.com/photo-1547280746-0e984cc4ca31");
+   background-size: cover;
+   background-repeat: no-repeat;
+   background-position: center center;
+   background-attachment:fixed;
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   justify-content: center;
+   text-transform: uppercase;
+ }
+
+ .hero h1 {
+   font-weight: 900;
+   font-size: 6vw;
+ }
+
+ .hero h2 {
+   font-size:3vw;
+ }
+
+.text-only {
+  width:100%;
+  height:100vh;
+  display:flex;
+  flex-direction:column;
+  align-items:center;
+  justify-content:center;
 }
