--- a/style.css
+++ b/style.css
@@ -76,10 +76,25 @@
  }
 
 .text-only {
-  width:100%;
-  height:100vh;
-  display:flex;
-  flex-direction:column;
-  align-items:center;
-  justify-content:center;
+   width:100%;
+   height:100vh;
+   display:flex;
+   flex-direction:column;
+   align-items:center;
+   justify-content:center;
+   background:#eee;
+   color:#333;
+   gap:3vh;
+}
+
+.text-only h1 {
+   font-weight: 900;
+   font-size: 6vw;
+   color:#ef3d8c;
+   text-transfrom:uppercase;
+}
+
+.text-only p {
+   font-size: 1.25vw;
+   
 }
