--- a/style.css
+++ b/style.css
@@ -91,7 +91,7 @@
    font-weight: 900;
    font-size: 6vw;
    color:#ef3d8c;
-   text-transfrom:uppercase;
+   text-transform:uppercase;
 }
 
 .text-only p {
